--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <title>Cart React</title>
 
     <meta
@@ -23,7 +24,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-site.com" />
-    <meta property="og:image" content="/logo192.png" />
+    <!-- <meta property="og:image" content="/logo192.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cart" />
@@ -31,11 +32,11 @@
       name="twitter:description"
       content="Add or remove products from the shopping cart."
     />
-    <meta name="twitter:image" content="/logo192.png" />
+    <!-- <meta name="twitter:image" content="/logo192.png" /> -->
     <meta name="twitter:creator" content="@your-user" />
 
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="apple-touch-icon" href="/logo192.png" /> -->
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
